--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -385,7 +385,7 @@
             box-shadow: 0 0 5px var(--shadow-color);
         }
         
-        /* --- NEW: Styles for Setups Table Highlighting --- */
+        /* --- Styles for Setups Table Highlighting --- */
         .setups-table td.highlight-long {
             background-color: var(--green-bg);
             color: var(--green-text);
@@ -395,6 +395,44 @@
             background-color: var(--red-bg);
             color: var(--red-text);
             font-weight: bold;
+        }
+        
+        /* --- NEW: Yellow borders for setup sections --- */
+        /* Top Borders */
+        .setups-table thead tr:first-child th:nth-child(n+2) {
+            border-top: 2px solid yellow;
+        }
+
+        /* Bottom Borders */
+        .setups-table tbody tr:last-child td:nth-child(n+2),
+        .setups-table thead tr:last-child th:nth-child(n+1) {
+            border-bottom: 2px solid yellow;
+        }
+
+        /* Left Borders for each section */
+        .setups-table thead tr:first-child th:nth-child(2), /* 0-Candle Main */
+        .setups-table thead tr:last-child th:nth-child(1),  /* 0-Candle Sub */
+        .setups-table tbody td:nth-child(2),               /* 0-Candle Data */
+        .setups-table thead tr:first-child th:nth-child(3), /* 4-Candle Main */
+        .setups-table thead tr:last-child th:nth-child(4),  /* 4-Candle Sub */
+        .setups-table tbody td:nth-child(5),               /* 4-Candle Data */
+        .setups-table thead tr:first-child th:nth-child(4), /* Bounce Main */
+        .setups-table thead tr:last-child th:nth-child(7),  /* Bounce Sub */
+        .setups-table tbody td:nth-child(8) {              /* Bounce Data */
+            border-left: 2px solid yellow;
+        }
+
+        /* Right Borders for each section */
+        .setups-table thead tr:first-child th:nth-child(2), /* 0-Candle Main */
+        .setups-table thead tr:last-child th:nth-child(3),  /* 0-Candle Sub */
+        .setups-table tbody td:nth-child(4),               /* 0-Candle Data */
+        .setups-table thead tr:first-child th:nth-child(3), /* 4-Candle Main */
+        .setups-table thead tr:last-child th:nth-child(6),  /* 4-Candle Sub */
+        .setups-table tbody td:nth-child(7),               /* 4-Candle Data */
+        .setups-table thead tr:first-child th:nth-child(4), /* Bounce Main */
+        .setups-table thead tr:last-child th:nth-child(9),  /* Bounce Sub */
+        .setups-table tbody td:nth-child(10) {             /* Bounce Data */
+            border-right: 2px solid yellow;
         }
         /* --- End of New Styles --- */
 
