--- a/index.html
+++ b/index.html
@@ -2551,11 +2551,11 @@
             }
             
             // --- MODIFIED: This function now also handles the static highlighting ---
+            // --- MODIFIED: This function now correctly handles non-numeric text in cells ---
             function renderSetupsTable(tableElement, data) {
                 if (!tableElement) return;
                 const tbody = tableElement.querySelector('tbody');
 
-                // Define the prefixes for the data keys and their cell group start index
                 const setupTypes = [
                     { prefix: 'zero', baseIndex: 0 },
                     { prefix: 'four', baseIndex: 3 },
@@ -2567,7 +2567,7 @@
                     const rowData = data[timeframe] || {};
                     const cells = row.querySelectorAll('td');
 
-                    // First, populate all cell text content from the data
+                    // Populate cell text content from the data (this part is fine)
                     cells[0].textContent = rowData.zero_entry || '';
                     cells[1].textContent = rowData.zero_target || '';
                     cells[2].textContent = rowData.zero_stoploss || '';
@@ -2578,27 +2578,30 @@
                     cells[7].textContent = rowData.bounce_target || '';
                     cells[8].textContent = rowData.bounce_stoploss || '';
 
-                    // Now, iterate through the three setup groups to apply styling
+                    // Iterate through the three setup groups to apply styling
                     setupTypes.forEach(setup => {
                         const entryCell = cells[setup.baseIndex];
                         const targetCell = cells[setup.baseIndex + 1];
                         const stoplossCell = cells[setup.baseIndex + 2];
-                        
-                        // Get the values for comparison
-                        const entryValue = parseFloat(entryCell.textContent);
-                        const targetValue = parseFloat(targetCell.textContent);
-
                         const groupCells = [entryCell, targetCell, stoplossCell];
 
-                        // Always clear previous styling first before applying new logic
+                        // Always clear previous styling first
                         groupCells.forEach(cell => cell.classList.remove('highlight-long', 'highlight-short'));
 
-                        // Check for valid numbers before applying new styling
+                        const entryText = entryCell.textContent.trim();
+                        const targetText = targetCell.textContent.trim();
+
+                        // Use Number() for a strict check. It returns NaN if the string contains non-numeric characters.
+                        const entryValue = Number(entryText);
+                        const targetValue = Number(targetText);
+
+                        // Check if BOTH are valid numbers and not zero. isNaN() will now correctly catch "3939 hit profit".
                         if (isNaN(entryValue) || isNaN(targetValue) || entryValue === 0 || targetValue === 0) {
-                            return; // Skip this group if data is invalid/empty
+                            // If inputs are invalid, empty, or contain text, do nothing. The cells remain uncolored.
+                            return; // This acts like 'continue' in a forEach loop
                         }
 
-                        // Apply new styling based on the long/short logic
+                        // Apply new styling only if both values are valid numbers
                         if (targetValue > entryValue) {
                             groupCells.forEach(cell => cell.classList.add('highlight-long'));
                         } else if (entryValue > targetValue) {
