--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
                         <div class="metadata-item"><span class="metadata-label">Lookback Period</span><span id="sr-metadata-dates" class="metadata-value">--</span></div>
                         <div class="metadata-item"><span class="metadata-label">Timeframes Analyzed</span><span id="sr-metadata-timeframes" class="metadata-value">--</span></div>
                         <div class="metadata-item"><span class="metadata-label">Pivot Windows</span><span id="sr-metadata-windows" class="metadata-value">--</span></div>
-                        <div class="metadata-item"><span class="metadata-label">Pivot Sources</span><span class="metadata-value">Wick High, Wick Low</span></div>
+                        <div class="metadata-item"><span class="metadata-label">Pivot Sources</span><span class="metadata-value">Wick High, Wick Low, Close High, Close Low</span></div>
                         <div class="metadata-item">
                             <span class="metadata-label">Strength Score Weights</span>
                             <div class="rating-explanation metadata-value">'15m': 1.0,
