--- a/index.html
+++ b/index.html
@@ -1048,15 +1048,16 @@
             background-color: var(--bg-color); /* Subtle background difference */
         }
         
-        #sr-metadata-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Responsive grid */
-            gap: 20px;
-            padding: 0;
-            margin: 0;
-            background-color: transparent;
-            border: none;
-        }
+#sr-metadata-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border: none;
+    justify-content: center; /* This line centers the grid items */
+}
 
         .metadata-group {
             border: 1px solid var(--border-color);
