--- a/index.html
+++ b/index.html
@@ -1566,7 +1566,7 @@
 
                         <!-- Group 2: Scoring Methodology -->
                         <div class="metadata-group">
-                            <h4 class="metadata-group-title">Scoring Methodology</h4>
+                            <h4 class="metadata-group-title">Scoring Method</h4>
                              <div class="metadata-item">
                                 <span class="metadata-label">Pivot Sources</span>
                                 <div class="metadata-value weight-list">
