--- a/index.html
+++ b/index.html
@@ -1573,6 +1573,9 @@
                                 <div class="metadata-value weight-list">
                                     <span>Wick High</span>
                                     <span>Wick Low</span>
+                                              <span>Close High</span>
+                                        <span>Close Low</span>
+                              
                                 </div>
                             </div>
                             <div class="metadata-item">
