--- a/index.html
+++ b/index.html
@@ -1121,6 +1121,56 @@
         }
 
         /* --- END: S/R Key styles --- */
+
+
+
+        /* --- START: New Compact S/R View for Mobile --- */
+.sr-column.support .sr-level-price-range,
+.sr-column.resistance .sr-level-price-range {
+    font-weight: 500;
+}
+
+.sr-column.support .sr-level-price-range {
+    color: var(--green-text);
+}
+.sr-column.resistance .sr-level-price-range {
+    color: var(--red-text);
+}
+
+.sr-level-card {
+    /* Flatten the card into a simple row */
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    margin-bottom: 0;
+    padding: 0;
+    border-bottom: 1px solid var(--border-color);
+}
+.sr-column .sr-level-card:last-of-type {
+    border-bottom: none; /* No line on the very last item */
+}
+
+.sr-level-header {
+    /* Adjust padding for a tighter row-like feel */
+    padding: 12px 5px;
+    border-bottom: none;
+}
+
+.sr-level-price-range {
+    font-size: 15px; /* Slightly smaller font for mobile */
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; /* More readable font for mobile */
+}
+
+.sr-level-strength {
+    padding: 3px 8px; /* Tighter badge */
+    font-size: 12px;
+}
+
+.sr-level-pivots {
+    /* Hide the less critical pivot count on mobile */
+    display: none;
+}
+/* --- END: New Compact S/R View for Mobile --- */
     </style>
 </head>
 <body>
