--- a/index.html
+++ b/index.html
@@ -1042,80 +1042,64 @@
 
                 /* --- START: Replace/Add these styles for the S/R Key --- */
 
+            /* --- START: Styles for the new compact S/R Key --- */
+
         #sr-legend-content {
-            padding: 20px;
+            padding: 12px 15px; /* Reduced padding */
             display: block;
-            background-color: var(--bg-color); /* Subtle background difference */
+            background-color: var(--bg-color);
         }
 
-#sr-metadata-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 20px;
-    padding: 0;
-    margin: 0;
-    background-color: transparent;
-    border: none;
-    justify-content: center; /* This line centers the grid items */
-}
-
-        .metadata-group {
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            padding: 15px;
-            background-color: var(--card-bg);
+        #sr-metadata-container {
             display: flex;
-            flex-direction: column;
-            gap: 15px; /* Space between items in a group */
+            flex-wrap: wrap;
+            align-items: baseline; /* Aligns text nicely */
+            gap: 8px 20px; /* row-gap column-gap */
+            justify-content: center;
         }
 
-        .metadata-group-title {
-            margin: 0 0 5px 0;
-            padding-bottom: 10px;
-            font-size: 13px;
-            font-weight: 600;
+        /* The groups are gone, so these are no longer needed */
+        .metadata-group, .metadata-group-title {
+           display: none;
+        }
+
+        .metadata-item {
+            display: flex;
+            align-items: baseline;
+            gap: 6px; /* Tighter gap between label and value */
+        }
+
+        .metadata-label {
+            font-weight: 500;
+            font-size: 11px; /* Smaller label */
             color: var(--subtle-text);
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-            border-bottom: 1px solid var(--border-color);
+            margin: 0;
+            white-space: nowrap;
         }
 
-        .metadata-item { 
-            font-size: 14px; 
-            line-height: 1.5;
-        }
-
-        .metadata-label { 
-            font-weight: 500; 
+        .metadata-value {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            color: var(--text-color);
             font-size: 12px;
-            color: var(--subtle-text); 
-            display: block; 
-            margin-bottom: 5px; 
+            font-weight: 500;
         }
 
-        .metadata-value { 
-            font-family: 'Courier New', Courier, monospace; 
-            color: var(--text-color); 
-            font-size: 15px;
-            font-weight: 600;
-        }
-
-        /* New styles for the weight lists */
+        /* Compact weight list styles */
         .weight-list {
             display: flex;
             flex-wrap: wrap;
-            gap: 8px;
+            gap: 5px;
         }
 
         .weight-list span {
             background-color: var(--header-bg);
-            padding: 4px 10px;
-            border-radius: 12px;
-            font-size: 12px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; /* Use system font for these */
+            padding: 2px 7px;
+            border-radius: 8px;
+            font-size: 11px;
+            line-height: 1.4;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
-        /* Remove old rule */
         .rating-explanation {
            display: none;
         }
@@ -1602,51 +1586,46 @@
                     <h4>S/R Levels Key & Methodology</h4>
                     <button id="sr-legend-toggle-btn" title="Toggle Details">−</button>
                 </div>
-                <div id="sr-legend-content">
+                                <div id="sr-legend-content">
                     <div id="sr-metadata-container">
-                        <!-- Group 1: Analysis Scope -->
-                        <div class="metadata-group">
-                            <h4 class="metadata-group-title">Analysis Scope</h4>
-                            <div class="metadata-item"><span class="metadata-label">Lookback Period</span><span id="sr-metadata-dates" class="metadata-value">--</span></div>
-                            <div class="metadata-item"><span class="metadata-label">Timeframes Analyzed</span><span id="sr-metadata-timeframes" class="metadata-value">--</span></div>
-                            <div class="metadata-item"><span class="metadata-label">Pivot Windows</span><span id="sr-metadata-windows" class="metadata-value">--</span></div>
-
-
+                        <div class="metadata-item">
+                            <span class="metadata-label">Lookback:</span>
+                            <span id="sr-metadata-dates" class="metadata-value">--</span>
                         </div>
-
-                        <!-- Group 2: Scoring Methodology -->
-                        <div class="metadata-group">
-
-                            <h4 class="metadata-group-title">Scoring Method</h4>
-                             <div class="metadata-item">
-                                <span class="metadata-label">Pivot Sources</span>
-                                <div class="metadata-value weight-list">
-                                    <span>Wick High</span>
-                                    <span>Wick Low</span>
-                                              <span>Close High</span>
-                                        <span>Close Low</span>
-
-                                </div>
+                        <div class="metadata-item">
+                            <span class="metadata-label">Timeframes:</span>
+                            <span id="sr-metadata-timeframes" class="metadata-value">--</span>
+                        </div>
+                        <div class="metadata-item">
+                            <span class="metadata-label">Windows:</span>
+                            <span id="sr-metadata-windows" class="metadata-value">--</span>
+                        </div>
+                        <div class="metadata-item">
+                            <span class="metadata-label">Sources:</span>
+                            <div class="metadata-value weight-list">
+                                <span>Wick H/L</span>
+                                <span>Close H/L</span>
                             </div>
-                            <div class="metadata-item">
-                                <span class="metadata-label">Source Weights</span>
-                                <div class="metadata-value weight-list">
-                                    <span>Wick (1.0)</span>
-                                    <span>Close (1.5)</span>
-                                </div>
+                        </div>
+                        <div class="metadata-item">
+                            <span class="metadata-label">Weights:</span>
+                            <div class="metadata-value weight-list">
+                                <span>Wick(1.0)</span>
+                                <span>Close(1.5)</span>
                             </div>
-                            <div class="metadata-item">
-                                <span class="metadata-label">Timeframe Strength Weights</span>
-                                <div class="metadata-value weight-list">
-                                    <span>15m: 1.0</span>
-                                    <span>30m: 1.2</span>
-                                    <span>1h: 1.5</span>
-                                    <span>2h: 2.0</span>
-                                    <span>4h: 2.5</span>
-                                </div>
+                        </div>
+                        <div class="metadata-item">
+                            <span class="metadata-label">TF Strength:</span>
+                            <div class="metadata-value weight-list">
+                                <span>15m:1</span>
+                                <span>30m:1.2</span>
+                                <span>1h:1.5</span>
+                                <span>2h:2</span>
+                                <span>4h:2.5</span>
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
 
