--- a/index.html
+++ b/index.html
@@ -4163,8 +4163,9 @@ if (content) {
             renderDateNavigation();
             renderChartLibrary2Folders();
             renderChartLibrary2Preview();
-
-            const sectionsToOpen = ['Reminders', 'Live Trades', 'Sentiment Log', 'Add New Trade', 'Notes'];
+            
+            // MODIFICATION HERE: Added 'Trading Setups' to the array
+            const sectionsToOpen = ['Reminders', 'Live Trades', 'Sentiment Log', 'Add New Trade', 'Notes', 'Trading Setups'];
             document.querySelectorAll('.collapsible-header h2').forEach(h2 => {
                 if (sectionsToOpen.includes(h2.textContent.trim())) {
                     const section = h2.closest('.collapsible-section');
