--- a/index.html
+++ b/index.html
@@ -1195,6 +1195,7 @@
 /* --- END: New S/R Methodology styles --- */
 
         /* --- START: Add these new styles for the Detailed S/R Key --- */
+/* --- START: Add these new styles for the Detailed S/R Key --- */
 .methodology-breakdown {
     margin-top: 15px;
     padding-top: 15px;
@@ -1202,7 +1203,9 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 15px;
+    justify-content: center; /* <<< THIS IS THE FIX <<< */
 }
+/* ... other rules ... */
 .methodology-card {
     background-color: var(--bg-color);
     border: 1px solid var(--border-color);
@@ -1691,7 +1694,7 @@
 <!-- START: NEW, DETAILED S/R KEY BLOCK -->
 <div id="sr-legend-container">
     <div id="sr-legend-header">
-        <h4>S/R Levels Key & Methodology</h4>
+        <h4>S/R Levels Key</h4>
         <button id="sr-legend-toggle-btn" title="Toggle Details">−</button>
     </div>
     <div id="sr-legend-content">
